# demo

./: .dockerignore  .gitignore  README.md
docs/: api-spec.md  architecture.md  data-model.md  runbook.md
infra/docker/: docker-compose.yml
infra/k8s/: celery-worker-deployment.yaml  chromadb-deployment.yaml  gateway-deployment.yaml  minio-deployment.yaml  namespace.yaml  orchestrator-deployment.yaml  postgres-deployment.yaml  redis-deployment.yaml  secrets-example.yaml
services/agent-runner/: Dockerfile  pyproject.toml
services/agent-runner/app/: main.py
services/auth-agent/: agent.py  pyproject.toml
services/exploit-agent/: Dockerfile  agent.py  pyproject.toml
services/fuzz-agent/: agent.py  pyproject.toml
services/gateway/: Dockerfile  pyproject.toml
services/gateway/app/: __init__.py  main.py  websocket.py
services/gateway/app/routers/: __init__.py  agents.py  auth.py  evidence.py  findings.py  projects.py  scans.py  targets.py  websocket.py
services/learning-agent/: agent.py  pyproject.toml
services/orchestrator/: Dockerfile  pyproject.toml
services/orchestrator/app/: celery_app.py  main.py  scheduler.py  test_case_seeder.py  test_planner.py
services/recon-agent/: Dockerfile  agent.py  pyproject.toml
services/reporter-agent/: agent.py  pyproject.toml
services/session-agent/: agent.py  pyproject.toml
services/shared/: __init__.py  agent_protocol.py  alembic.ini  audit.py  config.py  database.py  security.py  storage.py
services/shared/migrations/: env.py
services/shared/migrations/versions/: 001_initial_schema.py  002_add_audit_logs.py
services/validator-agent/: Dockerfile  agent.py  debate.py  pyproject.toml
ui/web/: package-lock.json
ui/web/apex-pentest-ui/: index.html  package-lock.json  package.json
ui/web/apex-pentest-ui/src/: App.tsx
ui/web/apex-pentest-ui/src/api/: client.ts
ui/web/apex-pentest-ui/src/hooks/: useWebSocket.ts
ui/web/apex-pentest-ui/src/pages/: Evidence.tsx  LiveScan.tsx  ProjectDetail.tsx  Settings.tsx  TestPlan.tsx
ui/web/src/: App.tsx
ui/web/src/api/: client.ts
ui/web/src/pages/: Dashboard.tsx  Login.tsx  ProjectDetail.tsx  Settings.tsx  Signup.tsx
