[tool.poetry]
name = "apex-agent-runner"
version = "0.1.0"
description = "Agent Runner service for Apex Pentest X"
authors = ["Apex Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
docker = "^7.0.0"
redis = "^5.0.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
