[tool.poetry]
name = "apex-fuzz-agent"
version = "0.1.0"
description = "Fuzzing Agent with Mutation Engine for Apex Pentest X"
authors = ["Apex Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
pydantic = "^2.5.0"
redis = "^5.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
