[tool.poetry]
name = "apex-learning-agent"
version = "0.1.0"
description = "Learning Agent for Apex Pentest X"
authors = ["Apex Team"]

[tool.poetry.dependencies]
python = "^3.11"
chromadb = "^0.4.18"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
pydantic = "^2.5.0"
numpy = "^1.26.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
