[tool.poetry]
name = "apex-orchestrator"
version = "0.1.0"
description = "Orchestrator service for Apex Pentest X"
authors = ["Apex Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
celery = "^5.3.4"
redis = "^5.0.1"
minio = "^7.2.0"
chromadb = "^0.4.18"
google-generativeai = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
