[tool.poetry]
name = "apex-recon-agent"
version = "0.1.0"
description = "Reconnaissance Agent for Apex Pentest X"
authors = ["Apex Team"]

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.40.0"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
pydantic = "^2.5.0"
redis = "^5.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
