[tool.poetry]
name = "apex-session-agent"
version = "0.1.0"
description = "Session Agent for Apex Pentest X"
authors = ["Apex Team"]

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.40.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
pydantic = "^2.5.0"
redis = "^5.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
